set up api folder with v1 folder in it and a tests folder

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
   - pip install coverage
   - pip install nose
 script:
-  - nosetests --with-coverage
+  - nosetests --with-coverage --cover-tests --cover-package=tests
 after_success:
   - coveralls
   - pytest   
