--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,8 @@ python:
   - "3.6"
 install:
   - pip install -r requirements.txt
-  - pip install coveralls
-  - pip install coverage
-  - pip install nose
 script:
+  - py.test
   - nosetests --with-coverage --cover-tests --cover-package=tests
 after_success:
   - coveralls
