--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ install:
   - pip install -r requirements.txt
 script:
   - py.test
-  - nosetests --with-coverage --cover-tests --cover-package=tests
+  - py.test --cov-config .coveragerc  --cov=api  tests/
 after_success:
   - coveralls
   - pytest   
