add delete end point and tests and edit comments

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ install:
 script:
   - py.test
   - py.test --cov-config .coveragerc  --cov=api  tests/
+  - coverage report
 after_success:
   - coveralls
   - pytest   
