--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
 install:
   - pip install -r requirements.txt
 before_script:
- - psql -c 'create database mydiary;' -U soko -P 'sokool'
+ - createdb mydiary
 script:
   - py.test
   - py.test --cov-config .coveragerc  --cov=api  tests/
