--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
 more-itertools==4.2.0
+passlib==1.7.1
 pep8==1.7.1
 pluggy==0.6.0
 psycopg2==2.7.5
