--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ docopt==0.6.2
 Flask==1.0.2
 Flask-JWT-Extended==3.12.0
 Flask-RESTful==0.3.6
+flask-restful-swagger==0.20.1
 gunicorn==19.9.0
 idna==2.7
 isort==4.3.4
