--- a/Pipfile
+++ b/Pipfile
@@ -2,7 +2,7 @@
 url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
- 
+
 [packages]
 flask = "*"
 pytest = "*"
@@ -23,6 +23,7 @@ flask-restful-swagger = "*"
 [dev-packages]
 pylint = "*"
 "autopep8" = "*"
+"pep8" = "*"
 
 [requires]
 python_version = "3.6"
